--- a/src/styles/HotelCard.css
+++ b/src/styles/HotelCard.css
@@ -1,19 +1,40 @@
-.price-button {
-    background-color: gold; 
-    padding: 10px 20px; 
-    border: none; 
-    border-radius: 5px; 
-    font-weight: bold; 
-    cursor: pointer; 
-    width: 300px;
-    color: navy;
+.hotel-card-container {
+    position: relative;
   }
   
-  .price-button:hover {
-    background-color: #ffcc00; 
+  .toggle-button {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: #007bff;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
   }
-
-  .book-now{
-    color: navy;
+  
+  .description-container {
+    position: absolute;
+    top: calc(100% + 10px);
+    left: 10px; 
+    width: calc(100% - 20px); 
+    padding: 10px;
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: height 0.3s ease-out;
+    overflow: hidden;
+    height: 0; 
+    visibility: hidden;
   }
+  
+  .expanded {
+    height: auto; 
+    visibility: visible; 
+  }
+  
+  
+  
+  
   
