--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,6 +17,8 @@ body{
 .hotel-card-container{
     
         width: 900px;
+        /*padding: 20px;*/
+        /*border: 1px solid black;*/
         margin-right: 200px;
         margin-top: 50px;
         box-sizing: border-box;
