--- a/src/styles/HotelSorter.css
+++ b/src/styles/HotelSorter.css
@@ -2,17 +2,17 @@
 .hotel-sorter-container {
     position: fixed;
     top: 15%;
-    left: 100px; /* Adjust the left position */
+    left: 100px; 
     transform: translateY(-50%);
   }
   
   .sort-option {
-    margin-bottom: 3px; /* Spacing between options */
+    margin-bottom: 3px; 
     cursor: pointer;
-    padding: 5px; /* Add padding to create space around each option */
-    border: 1px solid #ccc; /* Add border to each option */
+    padding: 5px; 
+    border: 1px solid #ccc; 
     
-    width: 250px; /* Set the width of each option */
+    width: 250px;
     background-color: white;
   }
   
