--- a/src/styles/HotelSorter.css
+++ b/src/styles/HotelSorter.css
@@ -7,24 +7,36 @@
   }
   
   .sort-option {
-    margin-bottom: 3px; 
+    margin-bottom: 3px;
     cursor: pointer;
-    padding: 15px; 
-    border: 1px solid #ccc; 
-    
+    padding: 15px;
+    border: 1px solid #ccc;
     width: 250px;
     background-color: white;
-    color:navy ;
+    color: navy;
+    display: flex; /* Display as flex container */
+    align-items: center; /* Center items vertically */
   }
   
-
   .sort-option:hover,
   .sort-option:focus {
     background-color: #007bff;
-    
   }
-
+  
   .sort-option.active {
     background-color: #007bff;
     color: white;
   }
+  
+  .icon {
+    margin-left: 10px; /* Add space between icon and text */
+    order: 2; /* Place icon after text */
+  }
+  
+  .text {
+    order: 1; /* Place text before icon */
+    flex-grow: 1; /* Allow text to expand and fill remaining space */
+    overflow: hidden; /* Hide any overflow from long text */
+  }
+  
+  
